--- a/app/src/main/res/layout/activity_user_search.xml
+++ b/app/src/main/res/layout/activity_user_search.xml
@@ -9,4 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.mateuszdziubek.easysearch.usersearch.UserSearchActivity">
 
+    <fragment
+        android:name="com.example.mateuszdziubek.easysearch.usersearch.UserSearchFragment"
+        android:id="@+id/userSearchFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </RelativeLayout>
