--- a/app/src/main/res/layout/activity_location_search.xml
+++ b/app/src/main/res/layout/activity_location_search.xml
@@ -7,10 +7,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.mateuszdziubek.easysearch.usersearch.UserSearchActivity">
+    tools:context=".usersearch.LocationSearchActivity">
 
     <fragment
-        android:name="com.example.mateuszdziubek.easysearch.usersearch.UserSearchFragment"
+        android:name="com.example.mateuszdziubek.easysearch.usersearch.LocationSearchFragment"
         android:id="@+id/userSearchFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
